--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
-mapboxgl.accessToken = 'pk.eyJ1IjoiZXVnZW5la2FsaSIsImEiOiJjampyeXg2am4wMHJ1M3BvZ285dmFubDRvIn0.XMdolSIIM9bANpdozfv0bA';
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Generate and add a missing icon to the map</title>
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.css" rel="stylesheet" />
+<style>
+	body { margin: 0; padding: 0; }
+	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+</style>
+</head>
+<body>
+<div id="map"></div>
+ 
+<script>
+	mapboxgl.accessToken = 'pk.eyJ1IjoiZXVnZW5la2FsaSIsImEiOiJjampyeXg2am4wMHJ1M3BvZ285dmFubDRvIn0.XMdolSIIM9bANpdozfv0bA';
 var map = new mapboxgl.Map(
 	{
 		container: 'map',
 		style: 'mapbox://styles/mapbox/streets-v9'
 	}
 );
+</script>
